--- a/index.html
+++ b/index.html
@@ -150,6 +150,31 @@
   </div> 
   
   <div class="main">
+  <p>
+  <h2>Grundsätzlich funktionieren alle künstlichen Intelligenzen gleich.</h2> 
+  <br>
+  Künstliche Intelligenzen arbeiten mit dem EVA-Prinzip. Das  EVA-Prinzip 
+  bedeutet  „Eingabe, Verarbeitung, Ausgabe“, die künstliche Intelligenz 
+  bekommt also eine Information, zieht ihre Schlüsse daraus und gibt eine 
+  Lösung wieder aus.
+  <br><br>
+  Durch ein sogenanntes künstliches neuronale Netz, ahmt die künstliche 
+  Intelligenz die Funktionsweise eines menschlichen Gehirns nach. Ein neuronales 
+  Netz ist nicht anderes, als Netzwerke, die mit einander verbunden sind. Beim 
+  Menschen heißen diese Verbindungen Synapsen.
+  <br><br>
+  Viele künstliche Intelligenzen benutzen eine heuristische Methode, welche 
+  die künstlichen Intelligenzen wesentlich schneller arbeiten lässt, weil die 
+  künstlichen Intelligenzen mit der heuristischen Methode immer den möglichst 
+  schnellsten Weg zwischen zwei Knoten eines Netzwerkes suchen. Seit 1970 werden 
+  auch die genetischen Algorithmen verwendet. 
+  <br><br>
+  Die künstliche Intelligenz bekommt verschiedene Lösungen als binäre Zeichenfolge. 
+  Die besten Lösung haben die besten „Fortpflanzungchancen“ . Durch Rekombination 
+  und Mutation, die die künstliche Intelligenz mit Hilfe der „Fitness Funktion“ 
+  entstehen neue Lösungen und die künstliche Intelligenz gibt am Ende die beste 
+  Lösung aus.
+  </p>
   </div>
 
   <div class="pictures">
