--- a/index.html
+++ b/index.html
@@ -188,9 +188,7 @@
   <div class="side1">
   </div>
    <div class="main1"> 
-     <h3>Die Ersteller dieser Website</h3>
-	 <p>- Felix Pulter, Cedric Heinrich & Miko Pauli
-	 <br>- Johanneum zu Luebeck, Klasse Eb</p>    </div>
+      </div>
   </div>
   </div>
  </body> 
