--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<html lang="en">
+<html lang="en"> 
 
   <head>
-   
+
        <title>KI einfach erklärt</title>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -103,7 +103,7 @@
        width: 100%;
        padding: 20px;
           }
-  
+
      /* Footer */
       .footer {
       padding: 20px;
@@ -126,30 +126,53 @@
 
      </style>      
   </head>
-  <body>
+  <boby>
   <div class="header">
   <img scr="Start Bild KI.jpg">
   </div>
 
   <div class="navbar">
-  <a href="https://ki-einfach-erklaert.github.io/home/" class="active"		>Start</a>
-  <a href="https://ki-einfach-erklaert.github.io/arten" 					>Arten</a>
-  <a href="https://ki-einfach-erklaert.github.io/allgemeines" 				>Allgemeines</a>
-  <a href="https://ki-einfach-erklaert.github.io/beispiele" 				>Beispiele</a>
-  <a href="https://ki-einfach-erklaert.github.io/Arbeitsweise" 				>Arbeitsweise</a>
-  <a href="https://ki-einfach-erklaert.github.io/politik-und-wirtschaft"	>Politik und Wirtschaft</a>
+  <a href="https://ki-einfach-erklaert.github.io/home/" 				>Start</a>
   <a href="https://ki-einfach-erklaert.github.io/entstehung" 				>Entstehung</a>
-  <a href="https://ki-einfach-erklaert.github.io/links" 					>Links</a>
+  <a href="https://ki-einfach-erklaert.github.io/arbeitsweise" class="active"				>Arbeitsweise</a>
+  <a href="https://ki-einfach-erklaert.github.io/arten" 				>Arten</a>
+  <a href="https://ki-einfach-erklaert.github.io/politik-und-wirtschaft" 	>Politik und Wirtschaft</a>
+  <a href="https://ki-einfach-erklaert.github.io/aengste" 				>Ängste</a>
+  <a href="https://ki-einfach-erklaert.github.io/links" 				>Links</a>
   <a href="https://ki-einfach-erklaert.github.io/impressum" 				>Impressum</a>
-  <a href="https://ki-einfach-erklaert.github.io/quellen" 					>Quellen</a>
-	  
-	 </div>
+  <a href="https://ki-einfach-erklaert.github.io/quellen" 				>Quellen</a>
+ </div>
 
   <div class="row"> 
   <div class="side">
   </div> 
-  
+
   <div class="main">
+  <p>
+  <h2>Grundsätzlich funktionieren alle künstlichen Intelligenzen gleich.</h2> 
+  <br>
+  Künstliche Intelligenzen arbeiten mit dem EVA-Prinzip. Das  EVA-Prinzip 
+  bedeutet  „Eingabe, Verarbeitung, Ausgabe“, die künstliche Intelligenz 
+  bekommt also eine Information, zieht ihre Schlüsse daraus und gibt eine 
+  Lösung wieder aus.
+  <br><br>
+  Durch ein sogenanntes künstliches neuronale Netz, ahmt die künstliche 
+  Intelligenz die Funktionsweise eines menschlichen Gehirns nach. Ein neuronales 
+  Netz ist nicht anderes, als Netzwerke, die mit einander verbunden sind. Beim 
+  Menschen heißen diese Verbindungen Synapsen.
+  <br><br>
+  Viele künstliche Intelligenzen benutzen eine heuristische Methode, welche 
+  die künstlichen Intelligenzen wesentlich schneller arbeiten lässt, weil die 
+  künstlichen Intelligenzen mit der heuristischen Methode immer den möglichst 
+  schnellsten Weg zwischen zwei Knoten eines Netzwerkes suchen. Seit 1970 werden 
+  auch die genetischen Algorithmen verwendet. 
+  <br><br>
+  Die künstliche Intelligenz bekommt verschiedene Lösungen als binäre Zeichenfolge. 
+  Die besten Lösung haben die besten „Fortpflanzungchancen“ . Durch Rekombination 
+  und Mutation, die die künstliche Intelligenz mit Hilfe der „Fitness Funktion“ 
+  entstehen neue Lösungen und die künstliche Intelligenz gibt am Ende die beste 
+  Lösung aus.
+  </p>
   </div>
 
   <div class="pictures">
@@ -164,9 +187,7 @@
   <div class="side1">
   </div>
    <div class="main1"> 
-     <h3>Die Ersteller dieser Website</h3>
-	 <p>- Felix Pulter, Cedric Heinrich & Miko Pauli
-	 <br>- Johanneum zu Luebeck, Klasse Eb</p>    </div>
+      </div>
   </div>
   </div>
  </body> 
