--- a/index.html
+++ b/index.html
@@ -185,6 +185,14 @@
   <div class="footer">
   <div class="row"> 
   <div class="side1">
+    <h3>Quellen</h3>
+   <p>
+   <ul>
+   <li>A2.1 - A2.3</li>
+   <li>B2.1 - B2.2</li>  
+   <li>B0.1</li>
+   </ul>
+   </p>
   </div>
    <div class="main1"> 
       </div>
