--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
 
   <div class="row"> 
   <div class="side">
-  </div> 
+  <div class="pictures">
+
+   <img src="neuronales Netz.jpg" width="260" height="240">
+  </div>
+    </div> 
 
   <div class="main">
   <p>
@@ -176,8 +180,7 @@
   </div>
 
   <div class="pictures">
-
-   <img src="bild 1.jpg" width="1" height="1">
+  <img src="KI Gehirn.jpg" width="260" height="240">
   </div>
   </div> 
   <div class="footer">
